<resources>
    <string name="app_name">Home</string>
    <string name="app_description">A little smart home app for Philips Hue, Arduino and other devices</string>
    <string name="main_no_devices">No devices found</string>
    <string name="main_no_devices_summary">Add a new device in the settings</string>
    <string name="main_device_nonexistent">The device does not exist in your list</string>
    <string name="main_tap_to_connect">Tap to connect</string>
    <string name="main_connecting">Connecting</string>
    <string name="main_network_not_secure">Connection not secure</string>
    <string name="main_unknown_mode">The device uses an unknown mode</string>
    <string name="main_device_unavailable">The device is currently unavailable</string>
    <string name="main_parse_error">The response does not meet the requirements</string>
    <string name="main_client_error">The device did not answer</string>
    <string name="main_execution_completed">Execution completed successfully</string>
    <string name="main_device_icon">Device Icon</string>
    <string name="main_device_name">Your Devices</string>
    <string name="err">Something went wrong</string>
    <string name="err_wrong_format">Wrong format</string>
    <string name="err_missing_name">Please enter a name</string>
    <string name="err_missing_name_summary">A name is important so that you can recognize the entry later</string>
    <string name="err_missing_address">Please enter an address</string>
    <string name="err_missing_address_summary">An address is important because it allows the app to reach the device</string>
    <string name="hue_connect">Connect to your Bridge</string>
    <string name="hue_press_button">Please press the button on your bridge to continue.</string>
    <string name="hue_tap">Tap to select</string>
    <string name="hue_brightness">Brightness</string>
    <string name="hue_color_temperature">Color temperature</string>
    <string name="hue_hue_sat">Hue and saturation</string>
    <string name="hue_scene">Scene</string>
    <string name="hue_add_scene">Add Scene</string>
    <string name="hue_new_scene">New Scene</string>
    <string name="hue_delete_scene">Are you sure you want to delete this scene?</string>
    <string name="hue_bridge">Bridge</string>
    <string name="hue_bridge_name">Bridge Name</string>
    <string name="hue_bridge_model">Bridge Model</string>
    <string name="hue_bridge_id">Bridge ID</string>
    <string name="hue_bridge_software">Software Version</string>
    <string name="hue_bridge_zigbee">Zigbee Channel</string>
    <string name="hue_bridge_dhcp">DHCP</string>
    <string name="hue_bridge_time_zone">Time Zone</string>
    <string name="hue_users">Users</string>
    <string name="hue_controls">Controls</string>
    <string name="hue_lights">Lights</string>
    <string name="hue_room">Hue Room</string>
    <string name="hue_scene_shortcut">Hue Scene</string>
    <string name="tasmota" translatable="false">Tasmota</string>
    <string name="tasmota_empty_list">No commands added yet</string>
    <string name="tasmota_empty_list_summary">Add commands below</string>
    <string name="tasmota_add_command">Add command to list</string>
    <string name="tasmota_add_command_summary">Add a new command to your list</string>
    <string name="tasmota_add_command_dialog_title">Title</string>
    <string name="tasmota_add_command_dialog_command" translatable="false">cm\?cmnd=Power%20On</string>
    <string name="tasmota_add_command_dialog_title_empty">Command</string>
    <string name="tasmota_add_command_dialog_command_empty" translatable="false">cm\?</string>
    <string name="tasmota_delete_command">Are you sure you want to delete this entry?</string>
    <string name="tasmota_execute_once">Execute command</string>
    <string name="tasmota_execute_once_summary">Execute command once without adding it to the list</string>
    <string name="tasmota_open_ui">Open Tasmota UI</string>
    <string name="tasmota_open_ui_summary">Opens the Tasmota UI in a browser</string>
    <string name="shelly_humidity_sensor_summary">Current humidity</string>
    <string name="shelly_powermeter_summary">Current power consumption</string>
    <string name="shelly_powermeter_current">Current</string>
    <string name="shelly_powermeter_voltage">Voltage</string>
    <string name="shelly_powermeter_energy">Energy</string>
    <string name="shelly_powermeter_return_energy">Returned energy</string>
    <string name="shelly_switch_title">Switch %1$d</string>
    <string name="shelly_temperature_sensor_summary">Current temperature</string>
    <string name="shelly_wifi">WiFi</string>
    <string name="shelly_mqtt">MQTT</string>
    <string name="shelly_cloud">Cloud</string>
    <string name="shelly_uptime">Uptime</string>
    <string name="shelly_storage">Storage Used</string>
    <string name="shelly_ram">RAM Used</string>
    <string name="shelly_update">Updates Available</string>
    <string name="input_title">Please enter something</string>
    <string name="input_hint">Input</string>
    <string name="webView">Web View</string>
    <string name="webView_open">Open in browser</string>
    <string name="webView_error">Loading the website failed</string>
    <string name="webView_error_summary">Please check your network connection or try again later</string>
    <string name="webView_authentication">Authentication</string>
    <string name="webView_ssl_error">Untrusted certificate</string>
    <string name="pref">Settings</string>
    <string name="pref_general">General Settings</string>
    <string name="pref_columns">Column count</string>
    <string name="pref_columns_summary">Changes the number of columns of the main list</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_summary">Select the app language</string>
    <string name="pref_language_restart">Restarting app to apply language...</string>
    <string name="pref_devices">Devices</string>
    <string name="pref_edit">Edit device list</string>
    <string name="pref_edit_summary">Edit the list of devices</string>
    <string name="pref_delete_device_question">Are you sure you want to delete this device?</string>
    <string name="pref_device_config">Export and Import Configuration</string>
    <string name="pref_add_shortcut">Add to Home screen</string>
    <string name="pref_add_shortcut_failed">Shortcuts are not supported by your system</string>
    <string name="pref_add">Add a new device</string>
    <string name="pref_add_summary">Add a new device with its address</string>
    <string name="pref_add_method">Select Method</string>
    <string name="pref_add_new_device">New Device</string>
    <string name="pref_add_id">Internal ID: %1$s</string>
    <string name="pref_add_name">Name</string>
    <string name="pref_add_name_example">e.g., Device</string>
    <string name="pref_add_name_empty">Device</string>
    <string name="pref_add_address">Address</string>
    <string name="pref_add_address_example">e.g., http://127.0.0.1/</string>
    <string name="pref_add_icon">Icon</string>
    <string name="pref_add_mode">Mode</string>
    <string name="pref_add_search">Searching for compatible devices</string>
    <string name="pref_add_search_summary">This might take a couple of seconds</string>
    <string name="pref_add_dialog">Add Device</string>
    <string name="pref_add_dialog_message">Do you want to add &#8220;%1$s&#8221; to your devices?</string>
    <string name="pref_export">Export Configuration</string>
    <string name="pref_export_summary">Save devices and rooms to a JSON file</string>
    <string name="pref_import">Import Configuration</string>
    <string name="pref_import_summary">Load devices and rooms from a JSON file</string>
    <string name="pref_import_confirm_message">This will replace all your current devices and rooms. Continue?</string>
    <string name="pref_import_success">Configuration imported successfully</string>
    <string name="pref_import_failed">Import failed: %1$s</string>
    <string name="pref_export_failed">Export failed: %1$s</string>
    <string name="str_import">Import</string>
    <string name="err_loading_ui">Error loading UI: %1$s</string>
    <string name="err_saving_device">Error saving device: %1$s</string>
    <string name="pref_controls_auth">Require device unlock for controls</string>
    <string name="pref_controls_auth_summary">Require the device to be unlocked for power menu controls</string>
    <string name="pref_advanced">Advanced Settings</string>
    <string name="pref_reset">Delete all devices</string>
    <string name="pref_reset_summary">This deletes all your devices</string>
    <string name="pref_reset_question">Are you sure you want to delete all of your devices? This cannot be undone!</string>
    <string name="pref_reset_toast">Deleted all devices</string>
    <string name="pref_safety_checks">Block potentially unsafe requests</string>
    <string name="pref_safety_checks_summary">Perform basic security checks\nWarning: Turning this off can leak connection data to attackers!</string>
    <string name="pref_info">Information</string>
    <string name="pref_info_wiki">Wiki</string>
    <string name="pref_info_wiki_summary">Documentation and help</string>
    <string name="pref_info_header">Header background</string>
    <string name="pref_info_header_summary">Header background by Alberto Castillo Q. on Unsplash</string>
    <string name="pref_device_router">Router</string>
    <string name="placeholder">Loading</string>
    <string name="security_username">Username</string>
    <string name="security_password">Password</string>
    <string name="device_config_direct_view">Load device with main list</string>
    <string name="device_config_hide">Hide device from main list</string>
    <string name="device_config_hidden">hidden</string>
    <string name="device_config_room">Room</string>
    <string name="device_config_room_none">No room</string>
    <string name="rooms_title">Rooms</string>
    <string name="rooms_add">Add a new room</string>
    <string name="rooms_add_summary">Create a new room for organizing devices</string>
    <string name="rooms_new_room">New Room</string>
    <string name="rooms_name">Room Name</string>
    <string name="rooms_name_example">e.g., Living Room</string>
    <string name="rooms_icon">Room Icon</string>
    <string name="rooms_manage">Manage rooms</string>
    <string name="rooms_manage_summary">Create and edit rooms for organizing devices</string>
    <string name="rooms_delete_question">Are you sure you want to delete this room? Devices in this room will be moved to no room.</string>
    <string name="rooms_all">All Devices</string>
    <string name="rooms_no_room">No Room</string>
    <string name="device_config_info">Device Info</string>
    <string name="device_config_info_status">Status</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_edit">Edit</string>
    <string name="str_delete">Delete</string>
    <string name="str_show">Show</string>
    <string name="str_done">Done</string>
    <string name="str_add">Add</string>
    <string name="str_send">Send</string>
    <string name="str_on">On</string>
    <string name="str_off">Off</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_unreachable">Unreachable</string>
    <string name="about">About</string>
    <string name="about_summary">About the app</string>
    <string name="about_app_version">App version</string>
    <string name="about_app_version_desc" translatable="false">%1$s (%2$d)</string>
    <string name="about_privacy">External Content</string>
    <string name="about_privacy_desc">External content will be loaded from GitHub. Read their privacy policy for further information.</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_contributors">Contributors</string>
</resources>