<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="?dialogPreferredPadding"
    tools:context=".activities.HueConnectActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hue_connect"
        android:textAlignment="center"
        android:padding="?dialogPreferredPadding"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hue_press_button"
        android:textAlignment="center"
        android:padding="?dialogPreferredPadding"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="?dialogPreferredPadding"
        app:srcCompat="@drawable/ic_buttonpress"
        android:contentDescription="@string/hue_connect" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_cancel" />
</LinearLayout>