<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="?attr/actionBarSize"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/roomIcn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header_icon_height"
                    android:layout_marginTop="@dimen/dialog_item_margin"
                    android:contentDescription="@string/rooms_icon"
                    app:srcCompat="@drawable/ic_device_lamp" />

                <TextView
                    android:id="@+id/nameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dialog_item_margin"
                    android:text="@string/rooms_new_room"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <TextView
                    android:id="@+id/idTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dialog_item_margin"
                    android:text="@string/pref_add_id"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dialog_item_margin"
                android:layout_marginHorizontal="?dialogPreferredPadding"
                android:alpha="?android:attr/disabledAlpha"
                android:background="?android:attr/textColorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="?dialogPreferredPadding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rooms_name"
                    app:helperTextEnabled="true"
                    app:helperText="@string/rooms_name_example">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/iconSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dialog_item_margin"
                    android:hint="@string/pref_add_icon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@null"
                        android:focusable="false"
                        android:inputType="none|textNoSuggestions" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <View
                android:id="@+id/editDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="?dialogPreferredPadding"
                android:alpha="?android:attr/disabledAlpha"
                android:background="?android:attr/textColorSecondary" />

            <LinearLayout
                android:id="@+id/editSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="?dialogPreferredPadding"
                android:paddingVertical="@dimen/list_padding_vertical">

                <Button
                    style="@style/Widget.Material3.Button.TextButton"
                    android:id="@+id/deleteBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_delete"
                    android:textAlignment="textStart"
                    android:textColor="?android:attr/textColorPrimary"
                    app:iconTint="?android:attr/textColorSecondary"
                    app:icon="@drawable/ic_delete"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/str_done"
        app:srcCompat="@drawable/ic_done" />
</RelativeLayout>
